# glioma-segmentation-3d

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: brats2021.yaml
configs/inference/: default.yaml
configs/model/: resunet_se.yaml
configs/training/: default.yaml
docs/: EXPERIMENTS.md  METHODOLOGY.md
scripts/: evaluate.py  preprocess.py  train.py
src/glioma_seg/: __init__.py
src/glioma_seg/data/: __init__.py  dataset.py  io.py  preprocessing.py  transforms.py
src/glioma_seg/inference/: __init__.py  evaluator.py
src/glioma_seg/models/: __init__.py  blocks.py  resunet_se.py
src/glioma_seg/training/: __init__.py  data_manager.py  trainer.py
src/glioma_seg/utils/: __init__.py  logging.py  seed.py  visualization.py
tests/: conftest.py  test_blocks.py  test_models.py  test_preprocessing.py
